// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config.devServer boolean 1`] = `
Object {
  "contentBase": "/Users/joelmoss/dev/frails/test/dummy/public/assets",
  "port": 8080,
  "public": "localhost:8080",
  "publicPath": "/assets/",
  "watchOptions": Object {
    "ignored": "**/node_modules/**",
  },
}
`;

exports[`config.devServer object 1`] = `
Object {
  "contentBase": "/Users/joelmoss/dev/frails/test/dummy/public/assets",
  "hot": true,
  "port": 8080,
  "public": "localhost:8080",
  "publicPath": "/assets/",
  "watchOptions": Object {
    "ignored": "**/node_modules/**",
    "poll": true,
  },
}
`;
